[workspace]
# Open a separate workspace for each tutorial

[package]
name = "simple-crud"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.52"
async-std = { version = "1.10.0", features = ["attributes"] }
chrono = "0.4.19"
sea-orm = { version = "0.5.0", features = [
    "runtime-async-std-rustls",
    "sqlx-mysql",
    "macros",
    "with-chrono",
], default-features = false }
