[package]
name = "graphql-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = "4.0.4"
async-graphql-rocket = "4.0.4"
rocket = { version = "^0.5.0-rc.2", features = ["json"] }
sea-orm = { version = "^0.9.0", features = [
    "sqlx-mysql",
    "runtime-async-std-native-tls",
    "macros",
] }
sea-orm-migration = "^0.9.0"
serde_json = "1.0.81"
