[package]
name = "rocket-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "^0.5.0-rc.2", features = ["json"] }
sea-orm = { version = "0.8.0", features = [
    "sqlx-mysql",
    "runtime-async-std-native-tls",
    "macros",
] }
sea-orm-migration = "0.8.3"
serde_json = "1.0.81"

[dependencies.rocket_dyn_templates]
version = "0.1.0-rc.2"
features = ["tera"]
