[package]
name = "todo-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.53"
async-std = { version = "1.10.0", features = ["attributes"] }
bincode = "1.3.3"
sea-orm = { version = "0.6.0", features = [
    "runtime-async-std-rustls",
    "sqlx-postgres",
    "sqlx-sqlite",
    "macros",
], default-features = false }
serde = { version = "1.0.136", features = ["derive"] }

[features]
