[package]
name = "todo-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.55"
axum = "0.4.8"
bincode = "1.3.3"
chrono = "0.4.18"
dotenv = "0.15.0"
once_cell = "1.10.0"
sea-orm = { version = "0.6.0", features = [
    "runtime-tokio-rustls",
    "sqlx-postgres",
    "sqlx-sqlite",
    "macros",
], default-features = false }
serde = { version = "1.0.136", features = ["derive"] }
tokio = { version = "1.17.0", features = ["full"] }

[features]
