[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.55"
dotenv = "0.15.0"
json = "0.12.4"
minreq = "2.6.0"
sea-orm = { version = "0.6.0", features = ["runtime-tokio-rustls", "sqlx-sqlite", "macros"], default-features = false }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
tokio = { version = "1.17.0", features = ["full"] }
